# rules_python_repro

./: BUILD.bazel  MODULE.bazel  requirements.in  requirements.txt
.github/workflows/: ci.yml
