"repro"

module(name = "rules_python_repro")

bazel_dep(name = "rules_python", version = "0.37.0")
bazel_dep(name = "rules_uv", version = "0.34.0")

# configuration
PYTHON_VERSION = "3.12"

PYTHON_VERSION_SNAKE = PYTHON_VERSION.replace(".", "_")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = PYTHON_VERSION)
use_repo(python, "python_" + PYTHON_VERSION_SNAKE, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    enable_implicit_namespace_pkgs = True,
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "pip",
    python_version = PYTHON_VERSION,
    requirements_by_platform = {
        "//:requirements.txt": "linux_aarch64",
    },
)
use_repo(pip, "pip")
